# old-fashioned-donut

./: .clang_complete  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  bld.sh  build.sh  buildLinux.sh  buildWin.sh  cl.sh  cov.sh  makeParser.bat  makeParser.sh  waf  wscript
.helper/: Util.py  cinamo.py
__donut_sample__/: helloworld.donut  passwd.donut  recursive.donut  tarai.donut  time_op.donut
__helper__/: opcode.rb  opcode_info.rb  opcode_info_for_asm.rb
__testfiles__/: getflv.txt
_donut_sample/: pi.donut  pi.js  recursive.donut  tarai.donut  tarai.py  tarai.rb  time_op.donut
cmake/: config.h.in
scripts/: _valgrind_sup.txt  cl.sh  clean.sh  cov.sh  dprof.sh  dvalgrind.sh  makeParser.sh  parser.sh  prof.sh  valgrind.sh
src/chisa/: Chisa.cpp  Chisa.h  Chisa.hpp  Handler.h  Hexe.cpp  Hexe.h  Hexe.hpp  PlatformFairy.cpp  PlatformFairy.h  PlatformFairy.hpp
src/chisa/audio/: Instrument.cpp  Instrument.h  Instrument.hpp  Quartet.cpp  Quartet.h  Quartet.hpp  SoundSpec.cpp  SoundSpec.h
src/chisa/doc/: Util.cpp  Util.h
src/chisa/donut/: Clock.cpp  Clock.h  ConstPool.cpp  ConstPool.h  Decl.h  Donut.cpp  Donut.h  DozenBox.cpp  DozenBox.h  Exception.cpp  Exception.h
src/chisa/geom/: Area.h  Area.hpp  Decl.h  Decl.hpp  Margin.cpp  Margin.h  Matrix.h  Matrix.hpp  Serialize.cpp  Vector.h  Vector.hpp  XMLAttrParser.cpp  XMLAttributeParser.cpp  XSerializer.cpp
src/chisa/gl/: Buffer.cpp  Buffer.h  CairoUtil.h  Canvas.cpp  Canvas.h  Canvas.hpp  CanvasPNGLoader.cpp  Color.cpp  Color.h  Color.hpp  DecoUtil.cpp  DecoUtil.h  DecoUtil.hpp  Drawable.cpp  Drawable.h  Drawable.hpp  DrawableManager.cpp  DrawableManager.h  DrawableManager.hpp  Font.cpp  Font.h  Font.hpp  Handler.h  ImageFormat.h  ImageFormat.hpp  OpenGL.h  OpenGL.hpp  PredefinedStringRenderer.cpp  PredefinedStringRenderer.h  PredefinedSymRenderer.cpp  PredefinedSymRenderer.h  PredefinedSymRenderer.hpp  RawSprite.cpp  RawSprite.h  Sprite.cpp  Sprite.h  Sprite.hpp  StringRenderer.cpp  StringRenderer.h  Util.cpp  (+2 more)
src/chisa/input/: Joystick.cpp  Joystick.h  Joystick.hpp  JoystickManager.cpp  JoystickManager.h
src/chisa/logging/: Exception.cpp  Exception.h  Logger.cpp  Logger.h
src/chisa/tk/: Action.h  Action.hpp  ActionMediator.cpp  ActionSession.cpp  Angel.cpp  Angel.h  Angel.hpp  Element.cpp  Element.h  Element.hpp  Geom.h  Gesture.h  GestureMediator.cpp  GestureSession.cpp  Heaven.cpp  Heaven.h  Heaven.hpp  Layout.cpp  Layout.h  Stack.h  Stack.hpp  Task.cpp  Task.h  Universe.cpp  Universe.h  Universe.hpp  Widget.cpp  Widget.h  Widget.hpp  WidgetGroup.cpp  WidgetGroup.h  World.cpp  World.h  World.hpp
src/chisa/util/: ClassUtil.h  FileUtil.cpp  FileUtil.h  FileUtilInternal.h  MapUtil.h  PairUtil.h  Param.cpp  Param.h  Platform.h  Regex.h  StringUtil.cpp  StringUtil.h  Thread.cpp  Thread.h  VectorMap.h  XArchiver.cpp  XArchiver.h  XMLAttrParser.cpp  XMLUtil.cpp  XMLUtil.h  XVal.cpp  XVal.h  class_utils.h
src/cinamo/src/: Base64.cpp  Dynamic.cpp  Exception.cpp  FileSystem.cpp  FormPayload.cpp  Logger.cpp  String.cpp  StringICU.cpp  StringParse.cpp  StringSplit.cpp  Time.cpp  Url.cpp  Win32.cpp  XArchiver.cpp  XMLAttrParser.cpp  XVal.cpp
src/donut/: Clock.cpp  Clock.h  Decl.h  Donut.cpp  Donut.h  DozenBox.cpp  DozenBox.h  Exception.cpp  Exception.h
src/donut/native/: Bind.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h
src/donut/object/: Decl.h  DonutClosureObject.cpp  DonutClosureObject.h  DonutObject.cpp  FloatObject.cpp  FloatObject.h  Heap.cpp  Heap.h  HeapGC.cpp  HeapObject.cpp  HomuraObject.cpp  HomuraObject.h  NativeClosureObject.cpp  NativeClosureObject.h  NativeObject.cpp  NativeObject.h  Object.cpp  Object.h  ObjectMarking.cpp  ReactiveNativeObject.cpp  ReactiveNativeObject.h  Slot.cpp  Slot.h  StringObject.cpp  StringObject.h
src/donut/parser/: Compiler.g  ParseUtil.cpp  ParseUtil.h  Parser.cpp  Parser.h
src/donut/provider/: BoolProvider.cpp  BoolProvider.h  Decl.h  DonutProvider.cpp  DonutProvider.h  FloatProvider.cpp  FloatProvider.h  HomuraProvider.cpp  HomuraProvider.h  IntProvider.cpp  IntProvider.h  NativeClosureProvider.cpp  NativeClosureProvider.h  NullProvider.cpp  NullProvider.h  Provider.cpp  Provider.h  StringProvider.cpp  StringProvider.h
src/donut/source/: Closure.cpp  Closure.h  Decl.h  Inst.cpp  Inst.h  Source.cpp  Source.h
src/donut/src/: Clock.cpp  Donut.cpp  DozenBox.cpp  Exception.cpp
src/donut/vm/: Machine.cpp  Machine.h
src/entrypoint/donut/: SystemObject.cpp  SystemObject.h  SystemObject.hpp  SystemPatron.cpp  SystemPatron.h  SystemPatron.hpp  SystemProvider.cpp  SystemProvider.h  SystemProvider.hpp  main.cpp
src/entrypoint/pc/: Chisa.cpp  SDLJoystick.cpp  SDLJoystick.h  (+11 more)
src/nes/: Hexe.cpp  Hexe.h  Hexe.hpp  NesFairy.cpp  NesGeist.cpp  NesGeist.h  NesGeist.hpp
test/: TestCommon.h  TestCommon.hpp  TestUtil.cpp  main.cpp
test/chisa/: HandlerTest.cpp
test/cinamo/: Base64Test.cpp  BoxTest.cpp  ClassUtilTest.cpp  ConstexprList.cpp  DemangleTest.cpp  EitherTest.cpp  ExceptionTest.cpp  FileUtilTest.cpp  FormPayloadTest.cpp  FunctorBaseTest.cpp  LoggerTest.cpp  MatrixTest.cpp  MaybeTest.cpp  MixTypeTest.cpp  ParserTest.cpp  StringUtilTest.cpp  TypeTraitsTest.cpp  UnitTest.cpp  UrlTest.cpp  VectorMapTest.cpp  XArchiverTest.cpp  XMLAttrParserTest.cpp  XValueTest.cpp  XValueTestBinaryTypes.inc.h  XValueTestTypes.inc.h
test/donut/: ClockTest.cpp  EncoderDecoderStaticTest.cpp  ExceptionTest.cpp  Helper.h  Helper.hpp  ObjectTest.cpp  ParserTest.cpp  SlotTest.cpp  SourceSerializeTest.cpp
test/tarte/: DemangleTest.cpp  FileUtilTest.cpp  StringUtilTest.cpp  TypeTraitsTest.cpp  TypeTransTest.cpp  XArchiverTest.cpp  XMLAttrParserTest.cpp  XValueTest.cpp  XValueTestBinaryTypes.inc.h  XValueTestTypes.inc.h
test/util/: Base64Test.cpp  ClassUtilTest.cpp  StringUtilTest.cpp  VectorMapTest.cpp  XArchiverTest.cpp  XValueTest.cpp
universe/game/: layout.xml  main.donut
universe/slide/: layout.xml  main.donut  nes.donut
universe/slide2/: layout.xml  main.donut
universe/test/: layout.xml  main.donut
universe/workshop/: main.donut
(+874 files in other folders)
